tests/NormalTests/paczka2/big_fuzzy/35879731.err
Error in line 2: PxxP7Qt6RP3 A49 -3,0
Error in line 4: LJYX86mlz S845 49,6
Error in line 7: DD9We S845 249,0
Error in line 21: PxxP7Qt6RP3 S127 e8,6
Error in line 1: PxxP7Qt6RP3 A49 98,7
Error in line 31: A555 S127 15,7
Error in line 35: PxxP7Qt6RP3 S127 40,5
Error in line 36: DD9We S845 27,1
Error in line 44: 5j2 A555 43,3
Error in line 49: LJYX86mlz A49 9,4
Error in line 64: LJYX86mlz S845 36,9
Error in line 70: PxxP7Qt6RP3 S127 73,6
Error in line 80: PxxP7Qt6RP3 S845 23y,y
Error in line 86: DD9We A555 78,8
Error in line 87: DD9We S127 22,0
Error in line 88: PxxP7Qt6RP3 S845 16,6
Error in line 93: DD9We A555 88,4
Error in line 94: PxxP7Qt6RP3 A555 20,9
Error in line 69: j3NWui6v1 S845 73,4
Error in line 98: j3NWui6v1 A49 30,7
Error in line 104: DD9We A49 1,4
Error in line 114: DD9We S845 80,2
Error in line 115: qqw A49 58,0
Error in line 122: qqw S845 67,6
Error in line 124: qqw S127 24,6
Error in line 146: 5j2 S845 23,1
Error in line 135: PxxP7Qt6RP3 S127 50,2
Error in line 150: j3NWui6v1 S127 157,0
Error in line 158: j3NWui6v1 S127 10,88
Error in line 151: PxxP7Qt6RP3 S845 51,7
Error in line 160: LJYX86mlz S127 49,4
Error in line 159: qqw A49 24,7
Error in line 168: qqw S845 7,6
Error in line 170: j3NWui6v1 S845 291,4
Error in line 169: A555 A555 356,4
Error in line 173: PxxP7Qt6RP3 A555 170,7
Error in line 175: A555 S127 12,9
Error in line 163: LJYX86mlz A555 64,5
Error in line 185: j3NWui6v1 A49 85,6
Error in line 194: j3NWui6v1 A49 0,3
Error in line 202: j3NWui6v1 S845 80,9
Error in line 198: LJYX86mlz S845 369,0
Error in line 211: DD9We S845 30,04
Error in line 224: A555 S845 35,8
Error in line 232: A555 S127 -2,5
Error in line 234: LJYX86mlz S845 283,09
Error in line 231: j3NWui6v1 S845 82,0
Error in line 227: A555 S127 29,2
Error in line 226: LJYX86mlz S845 75,9
Error in line 233: 5j2 A49 39,4
Error in line 245: LJYX86mlz A555 46,9
Error in line 250: LJYX86mlz A49 152,54
